<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:background="@drawable/campanile"
    android:gravity="bottom"
    android:paddingLeft="20dp"
    android:paddingBottom="3dp"
    android:id="@+id/nav_menu_header"
    >

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/cy"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CyRate"
        android:textSize="24sp"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/black"
        android:textFontWeight="900"
        android:letterSpacing=".3"
        />


</LinearLayout>
