...


    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_favorites"
                    android:icon="@drawable/profile_icon"
                    android:title="Favorites" />
                <item
                    android:id="@+id/nav_edit_profile"
                    android:icon="@drawable/profile_icon"
                    android:title="Edit Profile" />
...
                    android:title="My Reviews" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="Log Out" />
                <item
                    android:id="@+id/nav_sign_in"
                    android:icon="@drawable/sign_in_icon"
                    android:title="Sign In" />
            </group>

        </menu>

...
