...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/open_menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/open_menu_icon"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView"
...
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userList_recyclerView"
            android:layout_width="409dp"
            android:layout_height="570dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
...
