...
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/profile_img"
                app:layout_constraintTop_toTopOf="@id/profile_img"
                android:text="User Name" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:letterSpacing=".2"
                android:textStyle="bold"
                android:textFontWeight="600"
...
